# labandco

./: .dockerignore  .editorconfig  .flaskenv  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Pipfile  Procfile  README.md  TODO.md  Vagrantfile  conftest.py  copy  install.py  jobs.py  noxfile.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  tox.ini  wsgi.py
.builds/: readme.md  ubuntu-2404.yml
debian/: changelog  control  rules
doc/: model.puml
etc/: provision.sh
front/: .eslintrc.js  Makefile  README.md  package.json  vue.config.js
front/sass/: fonts.scss  main.scss  overrides.scss  print.scss  tabs.scss
front/src/: main.js
front/src/admin2/: constantsEditor.vue
front/src/annuaire/: AnnuaireMembres.vue  Structures.vue  TableUsers.vue
front/src/feuille_cout/components/: feuille-cout.vue
front/src/forms/: autre_demande.js  convention.js  pi_invention.js  visibility.js
front/src/forms/components/: field-set.vue  form-group.vue  my-form.vue
front/src/plugins/: element.js
front/src/v3/: App.vue  LoginApp.vue  jrpc.js  mixins.js  rpc.js
front/src/v3/components/: FeuilleCout.vue
front/src/v3/router/: index.js
front/tests/e2e/: 00README.md
front/tests/e2e/plugins/: index.js
front/tests/e2e/specs/: test_form.js  test_home.js  test_table.js
front/tests/testcafe/: 00README.md  nouvelle_demande.js  test_table_demandes.js
front/tests/unit/: box-demandes.spec.js  col-settings.spec.js  constants-editor.spec.js  editor-modal.spec.js
labster/: app.py  auth.py  config.py  conftest.py  debug.py  di.py  logging.py  menu.py  persistence.py  rbac.py  search.py  security.py  types.py  util.py  web.py
labster/bi/: model.py  synchro.py
labster/blueprints/: __init__.py  backup.py  main.py  util.py
labster/blueprints/auth/: __init__.py  backdoors.py  cas.py
labster/blueprints/bi/: __init__.py  forms.py  model.py  views.py
labster/blueprints/logging/: __init__.py
labster/blueprints/notifications/: __init__.py  mails.py  views.py
labster/blueprints/v3/: __init__.py  constants.py  faq.py  nav.py  search.py  test_api.py
labster/blueprints/v3/auth/: __init__.py  self.py
labster/blueprints/v3/demandes/: __init__.py  demandes.py  rbac.py  tables.py
labster/blueprints/v3/user/: __init__.py  contacts.py  preferences.py  timeline.py
labster/bus/: __init__.py
labster/cli/: __init__.py  commands.py  indexing.py  migration.py  restheart.py  testing.py
labster/domain/models/: __init__.py  config.py  demandes.py  faq.py  financeurs.py  notifications.py  profiles.py  roles.py  unites.py  util.py  workflow.py
labster/domain/models/tests/: test_demandes.py  test_structure.py  test_util.py  test_with_session.py  test_workflow.py
labster/domain/services/: calculs_couts.py  constants.json  constants.py  dgrtt.py  notifications.py  roles.py  test_constants.py  test_couts.py  test_roles.py
labster/domain2/: __init__.py
labster/domain2/model/: base.py  demande.py  notification.py  profile.py  structure.py  type_structure.py  util.py
labster/domain2/model/tests/: test_structures.py  test_util.py
labster/domain2/services/: calculs_couts.py  constants.py  contacts.py  demande.py  documents_generes.py  notifications.py  roles.py  workflow.py
labster/domain2/services/tests/: test_constants.py  test_contacts.py  test_roles.py  test_workflow.py
labster/domain2/services/workflow/: forms.py  states.py  transitions.py
labster/extensions/: __init__.py  mail.py  profiler.py  whoosh.py
labster/forms/: common.py  faq.py
labster/infrastructure/repositories/inmemory/: __init__.py  base.py  profile_repository.py  structure_repository.py
labster/infrastructure/repositories/sqla/: demande_repository.py  mappers.py  profile_repository.py  structure_repository.py
labster/infrastructure/services/: sqla_role_service.py
labster/ldap/: __init__.py  boot.py  constants.py  ldif.py  load.py  parse.py  roles.py  sync.py
labster/ldap2/: __init__.py  ldif.py  roles.py  sync.py
labster/lib/: menu.py  test_menu.py  workflow.py
labster/newforms/: __init__.py  autre.py  avenant_convention.py  common.py  convention.py  pi_common.py  pi_invention.py  pi_logiciel.py  rh.py  test.py
labster/newforms/base/: fields.py  form.py
labster/rpc/: __init__.py  cache.py  contacts.py  context.py  demande.py  demandes.py  forms.py  home.py  home_boxes.py  membres.py  registry.py  roles.py  structures.py  users.py  util.py
labster/rpc/bi/: form.py  stats.py  util.py
labster/rpc/commands/: contacts.py  demandes.py  faq.py  membres.py  roles.py  structures.py  workflow.py
labster/rpc/queries/: constants.py  contacts.py  demande.py  demandes_tables.py  faq.py  home.py  home_boxes.py  membres.py  roles.py  search.py  structures.py  timeline.py  user.py  user_context.py  users.py  workflow.py
labster/rpc/tests/: conftest.py  test_contacts.py  test_roles.py  test_structures.py
labster/templates/: _container.html  _foot.html  _footer.html  _head.html  _header.html  _sidebar.html  calculette_feuille_cout.html  v3.j2
labster/templates/documents-generes/: adresse_dgrtt.html  devis-rh.html  lettre-commande-recrutement-doctorant.html  lettre-commande-recrutement.html  lettre_recrutement.css  pieces_a_joindre.html
labster/templates/emails/: _footer.html  notif-demande-recevable.html  notif-demande-rejetee.html  notif-generique.html  questionnaire.html
labster/test/: test_web.py
src/instance/whoosh/: _MAIN_0.toc
src/labster/: app.py  auth.py  config.py  conftest.py  debug.py  menu.py  rbac.py  search.py  security.py  signals.py  types.py  util.py  web.py
src/labster/bi/: synchro.py
src/labster/blueprints/: main.py
src/labster/bus/: __init__.py
src/labster/cli/: __init__.py  testing.py
src/labster/extensions/: whoosh.py
src/labster/forms/: workflow.py
src/labster/ldap/: constants.py  ldif.py  roles.py
src/labster/lib/: menu.py  workflow.py
src/labster/newforms/: autre.py  common.py  pi_common.py  pi_invention.py  pi_logiciel.py
src/labster/rpc/: __init__.py  context.py  registry.py
src/labster/templates/: _macros.html  v3.j2
(+202 files in other folders)
